--- a/app/src/main/res/drawable/login.xml
+++ b/app/src/main/res/drawable/login.xml
@@ -2,14 +2,23 @@
     <item>
         <shape android:shape="rectangle">
             <gradient
-                android:startColor="#532777"
-                android:endColor="#F4247A"
+                android:startColor="#6A1B9A"
+                android:centerColor="#8E24AA"
+                android:endColor="#D81B60"
                 android:angle="270"
-                android:type="radial"
-                android:centerX="0.5"
-                android:centerY="0.5"
-                android:gradientRadius="300" />
-            <corners android:radius="20dp" />
+                android:type="linear" />
+            <corners android:radius="16dp" />
         </shape>
+    </item>
+    <item>
+        <shape android:shape="rectangle">
+            <solid android:color="#33000000" />
+            <corners android:radius="16dp" />
+        </shape>
+        <padding
+            android:left="4dp"
+            android:top="4dp"
+            android:right="4dp"
+            android:bottom="4dp" />
     </item>
 </layer-list>
