--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,19 +1,31 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
-    android:background="@drawable/login">
+    android:background="@drawable/login"
+    android:padding="24dp"
+    tools:context=".MainActivity">
+
+    <ImageView
+        android:id="@+id/app_icon"
+        android:layout_width="120dp"
+        android:layout_height="120dp"
+        android:src="@drawable/ic_launcher_foreground"
+        android:layout_marginBottom="16dp" />
 
     <TextView
-        android:id="@+id/login_title"
+        android:id="@+id/app_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Login"
-        android:textSize="24sp"
+        android:text="True Love"
+        android:textSize="30sp"
+        android:textStyle="bold"
         android:textColor="@android:color/white"
-        android:layout_marginBottom="20dp" />
+        android:layout_marginBottom="24dp" />
 
     <EditText
         android:id="@+id/email_input"
@@ -21,9 +33,9 @@
         android:layout_height="wrap_content"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:padding="10dp"
-        android:background="@android:drawable/edit_text"
-        android:layout_marginBottom="10dp" />
+        android:padding="12dp"
+        android:background="@drawable/edit_text_background"
+        android:layout_marginBottom="16dp" />
 
     <EditText
         android:id="@+id/password_input"
@@ -31,18 +43,19 @@
         android:layout_height="wrap_content"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="10dp"
-        android:background="@android:drawable/edit_text"
-        android:layout_marginBottom="20dp" />
+        android:padding="12dp"
+        android:background="@drawable/edit_text_background"
+        android:layout_marginBottom="24dp" />
 
     <Button
         android:id="@+id/login_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Log In"
-        android:backgroundTint="@color/purple_500"
+        android:background="@drawable/button_background"
         android:textColor="@android:color/white"
-        android:layout_marginBottom="10dp" />
+        android:textStyle="bold"
+        android:layout_marginBottom="16dp" />
 
     <TextView
         android:id="@+id/register_link"
@@ -51,5 +64,6 @@
         android:text="Create an account"
         android:textColor="@android:color/white"
         android:textSize="16sp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center" />
 </LinearLayout>
