--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center"
     android:background="@drawable/login"
+    android:gravity="center"
+    android:orientation="vertical"
     android:padding="24dp"
     tools:context=".MainActivity">
 
@@ -14,34 +13,34 @@
         android:id="@+id/app_icon"
         android:layout_width="120dp"
         android:layout_height="120dp"
-        android:src="@drawable/androind_logo"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        android:src="@drawable/androind_logo" />
 
     <EditText
         android:id="@+id/email_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="16dp"
+        android:background="@drawable/edit_text_background"
+        android:elevation="2dp"
         android:hint="Email"
         android:inputType="textEmailAddress"
-        android:padding="16dp"
-        android:background="@drawable/edit_text_background"
-        android:layout_marginBottom="16dp"
-        android:elevation="2dp" />
+        android:padding="16dp" />
 
     <EditText
         android:id="@+id/password_input"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:background="@drawable/edit_text_background"
+        android:elevation="2dp"
         android:hint="Password"
         android:inputType="textPassword"
-        android:padding="16dp"
-        android:background="@drawable/edit_text_background"
-        android:layout_marginBottom="24dp"
-        android:elevation="2dp" />
+        android:padding="16dp" />
 
     <Button
         android:id="@+id/login_button"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:background="@drawable/button_background"
@@ -58,8 +57,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="16dp"
+        android:baselineAligned="false"
+        android:padding="8dp"
         android:text="Create an account"
         android:textColor="@android:color/white"
-        android:textSize="16sp"
-        android:padding="8dp" />
+        android:textSize="16sp" />
 </LinearLayout>
