--- a/app/src/main/res/layout/activity_profile.xml
+++ b/app/src/main/res/layout/activity_profile.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/login"
-    android:padding="24dp">
+    android:padding="24dp"
+    tools:context=".ProfileActivity">
 
     <ImageView
         android:id="@+id/selected_image"
@@ -21,7 +22,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:backgroundc="@drawable/select_image_button_background2"
+        android:background="@drawable/select_image_button_background2"
         android:elevation="4dp"
         android:fontFamily="sans-serif-medium"
         android:padding="12dp"
